# openbandparams

./: CHANGELOG.txt  README.md  build_doc.py  developers.txt  header.txt  index.html  pyproject.toml  setup.py  test.py
1.0/: .buildinfo  genindex.html  searchindex.js  tutorial.html
1.0/examples/: _Parameters.html  _Plot_Band_Offset_vs_Lattice_Constant_No_Phosphides.html  _Plot_Band_Offset_vs_Lattice_Constant_of_Strained_Binaries.html  _Plot_Bandgap_vs_Lattice_Constant_of_Quaternary1or2.html  _Plot_Bandgap_vs_Lattice_Constant_of_Strained_Binaries.html  _Plot_Valance_Band_Offset_vs_Lattice_Constant.html  _Plot_refractive_index_quaternaries_lattice_matched_inp.html  _References.html
doc/: PYPI_DESCRIPTION.rst  conf.py  installation.rst
doc/_build_examples/: Binaries.txt  GaPSb_on_InP.txt  Parameters.txt  Quaternaries.txt  References.txt  Strained_Parameters.txt  Strained_Ternaries.txt  Ternaries.txt  Ternaries_of_Ternaries.txt  examples.txt
doc/examples/: _GaPSb_on_InP.rst  _InGaAsP_lattice_matched_InP.rst  _Parameters.rst  _Plot_Band_Offset_vs_Composition_of_Ternary.rst  _Plot_Band_Offset_vs_Lattice_Constant_of_Strained_Binaries.rst  _Plot_Bandgap_vs_Composition_of_Quaternary3.rst  _Plot_Bandgap_vs_Composition_of_Ternary.rst  _Plot_Bandgap_vs_Lattice_Constant_of_Quaternary1or2.rst  _Plot_Bandgap_vs_Lattice_Constant_of_Quaternary3.rst  _Plot_InGaAsP_lattice_matched_InP.rst  _Plot_refractive_index_quaternaries_lattice_matched_inp.rst  _References.rst  _Strained_Ternaries.rst  _Ternaries.rst
src/openbandparams/: __init__.py  algorithms.py  alloy.py  equations.py  iii_v_alloy.py  parameter.py  (+11 more)
(+179 files in other folders)
