[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openbandparams"
version = "1.0"  # Replace with the actual version from version.py
description = "open source semiconductor band parameters"
readme = "doc/PYPI_DESCRIPTION.rst"
requires-python = ">=3.6"
license = {text = "AGPLv3"}
authors = [
    {name = "Scott J. Maddox", email = "smaddox@utexas.edu"},
    {name = "Duarte Silva", email = "d.j.fernandes.da.silva@tue.nl"}
]
dependencies = [
  "distro",
  "numpy",
  
]

[project.urls]
Homepage = "http://scott-maddox.github.io/openbandparams"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["openbandparams", "openbandparams.tests", "openbandparams.examples"]
package-dir = {"" = "src"}
zip-safe = true